--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 
     <div class="partner-logos">
       <!-- replace logos here! -->
-      <a href="https://www.acmi.net.au" target="_blank">
-        <img class="logo" src="{{ site.baseurl }}/assets/img/logo/acmi-white.png"/>
+      <a href="http://www.macpanama.org" target="_blank">
+        <!--<img class="logo" src="{{ site.baseurl }}/assets/img/logo/macpanama_logo.png"/>-->
       </a>
     </div>
   </div>
