--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,11 +16,11 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       	#fafafa;
-$background-hr:		#383838;
-$background-color: 	#222222;
-$background-darker: #1B1B1B;
-$brand-color:	   	#43A047;
+$text-color:        #fafafa;
+$background-hr:     #383838;
+$background-color:  #000000; // #222222;
+$background-darker:     #000000; // #1B1B1B;
+$brand-color:       #D9304D; // #cc3399; #990033;
 $anchor-hover-color:	lighten($brand-color, 30%);
 
 $player-now-playing-size:   13px;
