added logo, og-image, swipe translation

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,8 @@
   <meta name="twitter:title" content="{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}" />
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
   
-  <meta name="og:image" content="{{ site.baseurl | prepend: site.url }}/assets/img/meta/og-image.jpg" />
-  <meta name="twitter:image" content="{{ site.baseurl | prepend: site.url }}/assets/img/meta/og-image.jpg" />
+  <meta name="og:image" content="{{ site.baseurl | prepend: site.url }}/assets/img/meta/og-image.png" />
+  <meta name="twitter:image" content="{{ site.baseurl | prepend: site.url }}/assets/img/meta/og-image.png" />
 
   <!-- Canonical urls -->
 
