--- a/_layouts/bienvenidos.html
+++ b/_layouts/bienvenidos.html
@@ -21,7 +21,8 @@
 						<p><em>This audio project gives a voice to five women from Latin American art world.
 
 						The audioguide is quite simple to use. Like your smartphone. If you have any question, please ask our staff.</em></p>
-						<div class="prompt slick-slide-to-next">Swipe to read more
+						<div class="prompt slick-slide-to-next">Deslize para leer más <em>Swipe to read more</em>
+
 						<span class="button-forward">
 	      					<img src="{{ site.baseurl }}/assets/img/icons/button_forward.png"/>
 	    				</span>
